# assert2-rs

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yml
assert2-macros/: Cargo.toml  build.rs
assert2-macros/src/: assert.rs  check.rs  hygiene_bug.rs  let_assert.rs  let_placeholder.rs  lib.rs  whitespace.rs
check-macros/: Cargo.toml
check-macros/src/: lib.rs
examples/: fail.rs  images.rs  let-chain.rs  macrorules.rs
src/: check_scope.rs  info.rs  lib.rs  maybe_debug.rs  print.rs
src/__assert2_impl/: mod.rs  print.rs
src/__assert2_impl/print/: diff.rs  mod.rs  options.rs  writer.rs
tests/: assert-captures.rs  check.rs  let_assert.rs  no_prelude.rs  ui-tests.rs
tests/ui-tests/: .gitattributes  .gitignore  assert-false.rs  let-chain.rs  let-ok.rs  macrorules.rs  source-is-reindented.rs
tests/ui-tests/assert-false/: stderr-expected-stable
tests/ui-tests/custom-exit-code/: expected.stderr  main.rs
tests/ui-tests/false/: stderr-expected-stable
tests/ui-tests/let-chain/: stderr-expected-1.71.0  stderr-expected-nightly  stderr-expected-stable
tests/ui-tests/let-ok/: stderr-expected-nightly
tests/ui-tests/macrorules/: stderr-expected-1.71.0  stderr-expected-nightly  stderr-expected-stable
tests/ui-tests/source-is-reindented/: stderr-expected-1.71.0  stderr-expected-nightly
tests/ui-tests/success-exit/: expected.stdout  main.rs
