[package]
name = "assert2"
description = "assert!(...) and check!(...) macros inspired by Catch2, now with diffs!"
version = "0.3.17-beta1"
license = "BSD-2-Clause"
authors = ["Maarten de Vries <maarten@de-vri.es>", "Mara Bos <m-ou.se@m-ou.se>"]

rust-version = "1.70"
edition = "2021"

repository = "https://github.com/de-vri-es/assert2-rs"
documentation = "https://docs.rs/assert2"
readme = "README.md"
keywords = ["assert", "check", "test", "unit-test"]
categories = ["development-tools::debugging", "development-tools::testing"]

[dependencies]
assert2-macros = { version = "=0.3.17-beta1", path = "assert2-macros" }
yansi = "1.0.1"
diff = "0.1.13"
unicode-width = "0.2.1"
term_size = "0.3.2"

[workspace]
resolver = "2"
members = ["assert2-macros"]
