[package]
name = "assert2-macros"
description = "procedural macros for assert2"
version = "0.0.9"
license = "BSD-2-Clause"
authors = ["Maarten de Vries <maarten@de-vri.es>"]

edition = "2018"

repository = "https://github.com/de-vri-es/assert2-rs"
documentation = "https://docs.rs/assert2"

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = "0.5.11"
proc-macro2 = "1.0.7"
quote = "1.0.2"
syn = { version = "1.0.13", features = ["full"] }
