[package]
name = "assert2-macros"
description = "procedural macros for assert2"
version = "0.3.9"
license = "BSD-2-Clause"
authors = [
	"Maarten de Vries <maarten@de-vri.es>",
	"Mara Bos <m-ou.se@m-ou.se>",
]

rust-version = "1.65"
edition = "2021"

repository = "https://github.com/de-vri-es/assert2-rs"
documentation = "https://docs.rs/assert2"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.14"
quote = "1.0.2"
syn = { version = "1.0.13", features = ["full", "visit", "visit-mut"] }

[build-dependencies]
rustc_version = "0.4.0"
